--- a/wm/frontend/package.json
+++ b/wm/frontend/package.json
@@ -13,6 +13,8 @@
     "core-js": "^3.6.4",
     "formik": "^2.1.4",
     "material-ui": "^0.20.2",
+    "package-lock.json": "^1.0.0",
+    "package.json": "^2.0.1",
     "prettier": "^1.19.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
