--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-side-effect": "^2.1.0",
+    "react-table-drag-select": "^0.3.1",
     "reactstrap": "^6.5.0"
   },
   "scripts": {
