--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.18.1",
     "bootstrap": "^4.1.3",
+    "calendar-month-array": "^2.1.1",
     "core-js": "^3.6.4",
     "formik": "^2.1.4",
     "material-ui": "^0.20.2",
