--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.4",
     "formik": "^2.1.4",
     "material-ui": "^0.20.2",
+    "moment-timezone": "^0.5.28",
     "package-lock.json": "^1.0.0",
     "package.json": "^2.0.1",
     "prettier": "^1.19.1",
