--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.4",
     "formik": "^2.1.4",
     "material-ui": "^0.20.2",
+    "mathjs": "^6.6.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
     "package-lock.json": "^1.0.0",
