--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "mathjs": "^6.6.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
+    "object-hash": "^2.0.3",
     "package-lock.json": "^1.0.0",
     "package.json": "^2.0.1",
     "prettier": "^1.19.1",
@@ -32,6 +33,7 @@
     "react-table-drag-select": "^0.3.1",
     "react-tooltip": "^4.1.2",
     "reactstrap": "^6.5.0",
+    "string-hash": "^1.1.3",
     "styled-components": "^5.0.1"
   },
   "scripts": {
