--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.1",
     "bootstrap": "^4.1.3",
     "calendar-month-array": "^2.1.1",
+    "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.6.4",
     "formik": "^2.1.4",
     "grommet": "^2.11.3",
