updated codebase with better routing

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "calendar-month-array": "^2.1.1",
     "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.6.4",
+    "dotenv": "^10.0.0",
     "formik": "^2.1.4",
     "grommet": "^2.11.3",
     "grommet-icons": "^4.4.0",
+    "jquery": "^3.6.0",
     "material-ui": "^0.20.2",
     "mathjs": "^6.6.1",
     "moment": "^2.24.0",
