updating reqs again

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.6.5
 appdirs==1.4.4
+asgiref==3.4.1
 atomicwrites==1.4.0
 attrs==20.3.0
 beautifulsoup4==4.9.3
@@ -16,19 +17,13 @@ charset-normalizer==2.0.4
 click==8.0.1
 cryptography==3.4.7
 Deprecated==1.2.12
+Django==3.2.7
+django-cors-headers==3.9.0
+djangorestframework==3.12.4
 docutils==0.15.2
 ed25519==1.5
 entrypoints==0.3
 flake8==3.7.8
-Flask==2.0.1
-flask-buzz==0.1.15
-Flask-Cors==3.0.8
-Flask-JWT-Extended==3.21.0
-Flask-Mail==0.9.1
-Flask-Migrate==3.0.1
-flask-praetorian==1.2.0
-flask-redis==0.4.0
-Flask-SQLAlchemy==2.4.0
 fuzzywuzzy==0.18.0
 gunicorn==20.1.0
 idna==3.2
@@ -76,12 +71,13 @@ shellescape==3.8.1
 six==1.16.0
 soupsieve==2.2.1
 SQLAlchemy==1.3.22
+sqlparse==0.4.2
 tabulate==0.8.9
 toml==0.10.2
 tornado==6.1
 typing-extensions==3.7.4.3
 tzlocal==2.1
-urllib3==1.26.6
+urllib3==1.25
 wcwidth==0.2.5
 Werkzeug==2.0.1
 wrapt==1.12.1
