modified allowed hosts

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-FRONTEND_URL="http://localhost:8000/"
-BACKEND_URL="http://localhost:8000/api/"
+FRONTEND_URL="https://whentomeetwm.herokuapp.com"
+BACKEND_URL="https://whentomeetwm.herokuapp.com/api/"
