adding better build

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-FRONTEND_URL="https://whentomeetwm.herokuapp.com"
-BACKEND_URL="https://whentomeetwm.herokuapp.com/api/"
+REACT_APP_FRONTEND_URL="https://whentomeetwm.herokuapp.com"
+REACT_APP_BACKEND_URL="https://whentomeetwm.herokuapp.com/api/"
