--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_FRONTEND_URL="https://whentomeetwm.herokuapp.com"
-REACT_APP_BACKEND_URL="https://whentomeetwm.herokuapp.com/api/"
+REACT_APP_FRONTEND_URL="https://wm.allenwang314.com"
+REACT_APP_BACKEND_URL="https://wm.allenwang314.com/api/"
